--- a/src/components/FolderList.module.css
+++ b/src/components/FolderList.module.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-direction: column;
     width: 300px;
   }
 }
